--- a/dancefloor.html
+++ b/dancefloor.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Object Dance Party</title>
+    <h1><title>Object Dance Party</title></h1>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/shark.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
-    <div class="topbar">
-      <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+    <div class="container-fluid">
+      <div class="well">
+        <span class="title">OBJECT DANCE PARTY</span>
+
+        <a href="#" class="addDancerButton btn" data-dancer-maker-function-name="makeBlinkyDancer">+BLINKY DANCER</a>   
+        <a href="#" class="lineUpButton btn" data-dancer-maker-function-name="lineUpDancer">LINE UP!</a>    
+        
+        <a href="#" class="addSharkButton btn" data-dancer-maker-function-name="addShark">SHARK ATTACK!</a> 
+       </div>
+    </div>
+   
+
     <script src="src/init.js"></script>
   </body>
 </html>
